<resources>
    <string name="app_name">Mission Accomplished</string>
    <string name="action_settings">Settings</string>

    <string name="opcion_inicio">Inicio</string>
    <string name="opcion_cuenta">Mi Cuenta</string>
    <string name="opcion_logros">Logros</string>
    <string name="opcion_creditos">Créditos</string>
    <string name="opcion_contacto">Contacto</string>

    <string name="titulo_tab_misiones">MISIONES</string>
    <string name="titulo_tab_preguntas">PREGUNTAS</string>

    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_estadisticas">ESTADISTICAS</string>

    <string-array name="titulo_misiones">
        <item>Lo lograras?</item>
        <item>Cube challenge</item>
        <item>No se que poner?</item>
        <item>Mision Extreme</item>
        <item>Mision Insane</item>
    </string-array>

    <string-array name="titulo_preguntas">
        <item>Genero Arte</item>
        <item>Genero Deporte</item>
        <item>Genero Entretenim..</item>
        <item>Genero Ciencia</item>
        <item>Genero Historia</item>
    </string-array>

    <string-array name="titulo_logros">
        <item>El logro más dificil</item>
        <item>Te atreves a completarlo?</item>
        <item>Mision imposible</item>
        <item>Generoso</item>
        <item>El más listo</item>
    </string-array>

    <string-array name="contenido_misiones">
        <item>Esta es la mision 1 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es la mision 2 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es la mision 3 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es la mision 4 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es la mision 5 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
    </string-array>

    <string-array name="contenido_preguntas">
        <item>Esta es la pregunta 1 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es la pregunta 2 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es la pregunta 3 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es la pregunta 4 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es la pregunta5 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
    </string-array>

    <string-array name="contenido_logros">
        <item>Esta es el logro 1 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es el logro 2 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es el logro 3 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es el logro 4 la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
        <item>Esta es el logro la cual al completar una etapa deberas darle al boton etapa finalizada hasta completar la mision</item>
    </string-array>

    <string-array name="dificultad_misiones">
        <item>facil</item>
        <item>dificil</item>
        <item>insano</item>
        <item>extremo</item>
        <item>normal</item>
    </string-array>

    <string-array name="genero_pregunta">
        <item>arte</item>
        <item>entretenimiento</item>
        <item>deporte</item>
        <item>ciencia</item>
        <item>historia</item>
        <item>geografia</item>
    </string-array>

    <string-array name="estado_logro">
        <item>Completo</item>
        <item>En progreso</item>
        <item>En progreso</item>
        <item>En progreso</item>
        <item>En progreso</item>
        <item>En progreso</item>
    </string-array>

    <integer-array name="progreso_misiones">
        <item>30</item>
        <item>80</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
    </integer-array>

</resources>
