<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/opcion_inicio"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/opcion_inicio" />
        <item
            android:id="@+id/opcion_cuenta"
            android:icon="@drawable/ic_person"
            android:title="@string/opcion_cuenta" />
        <item
            android:id="@+id/opcion_logros"
            android:icon="@drawable/ic_cup"
            android:title="@string/opcion_logros" />
    </group>

    <item android:title="General">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/opcion_creditos"
                    android:icon="@drawable/ic_group"
                    android:title="@string/opcion_creditos" />
                <item
                    android:id="@+id/opcion_contacto"
                    android:icon="@drawable/ic_call"
                    android:title="@string/opcion_contacto" />
            </group>
        </menu>
    </item>

</menu>